tests/intersection/intersection.exp
Error ----------------------------------------------------------------------------------------------------- pred.js:17:8

Cannot return `options.objectMode || options.readableObjectMode || options.writableObjectMode` because undefined [1] is
incompatible with boolean [2].

   pred.js:17:8
   17|     || options.writableObjectMode; // error, undefined ~> boolean
              ^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   pred.js:11:25
   11|   writableObjectMode? : boolean
                               ^^^^^^^ [1]
   pred.js:14:59
   14| function hasObjectMode_bad(options: DuplexStreamOptions): boolean {
                                                                 ^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------- proper_blaming.js:9:3

Cannot get `x.nope` because property `nope` is missing in null [1].

   proper_blaming.js:9:3
   9| x.nope; // error here
        ^^^^

References:
   proper_blaming.js:5:14
   5| type O = {p: null} & E;
                   ^^^^ [1]


Error ------------------------------------------------------------------------------------------------ test_obj.js:29:12

Cannot assign `c` to `e` because:
 - Either number [1] is incompatible with string [2] in the indexer property.
 - Or number [3] is incompatible with string [2] in the indexer property.

   test_obj.js:29:12
   29| var e: E = c; // error
                  ^

References:
   lib/lib.js:33:27
   33| type C = { [key: string]: number } & { [key: string]: number };
                                 ^^^^^^ [1]
   test_obj.js:28:27
   28| type E = { [key: string]: string };
                                 ^^^^^^ [2]
   lib/lib.js:33:55
   33| type C = { [key: string]: number } & { [key: string]: number };
                                                             ^^^^^^ [3]



Found 3 errors
